charts/2_addons/istio/templates/200_istio-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "200"
