charts/2_addons/istio/templates/ISTIO_INGRESSGATEWAY=$(oc get route -n i.yml
ISTIO_INGRESSGATEWAY=$(oc get route -n istio-system istio-ingressgateway -o jsonpath={.spec.host})
echo "http://$ISTIO_INGRESSGATEWAY"

cat <<EOF | oc apply -f -
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load
  namespace: robot-shop
  labels:
    service: load
  annotations:
    argocd.argoproj.io/sync-wave: "310"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-shop
      version: v1
      service: load
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: robot-shop
        version: v1
        service: load
    spec:
      containers:
      - name: load
        image: robotshop/rs-load:latest
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: load
  namespace: robot-shop
spec:
  ports:
    - name: load
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    service: load
  type: ClusterIP
  sessionAffinity: None
EOF
